welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:5: error: ')' expected but ';' found.
		do{droite} while(x=<2;croisement())
                                     ^Poucet:5: error: ';' expected but ')' found.
		do{droite} while(x=<2;croisement())
                                                  ^Poucet:6: error: ';' expected but ')' found.
		do{gauche} while(x>=3;croisement())
                                                  ^